workshop03/codeserver.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: cs-deploy 
  namespace: myns
  labels:
    app: codeserver 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      name: cs-pod
      labels:
        app: codeserver
    spec:
      volumes:
        - name: data-vol
          persistentVolumeClaim:
            claimName: cs-pvc
      containers:
      - name: cs-containers 
        image: linuxserver/code-server:4.99.4
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: data-vol
            mountPath: /config/workspace
        ports:
        - name: cs-port 
          containerPort: 8443
        resources:
          requests:
            cpu: 512m # 1 CPU is 2000m
            memory: 256Mi # usually need about 2GB memory to do development
          limits: 
            cpu: 512m
            memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: cs-svc
  namespace: myns
  labels:
    app: codeserver
spec:
  type: ClusterIP
  selector:
    app: codeserver
  ports:
  - name: cs-port
    port: 8443
